# thingy.thingelstad.com

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  ROADMAP.md  STANDALONE_BUILD.md  STUDIO_MIGRATION_PLAN.md  TASKS.md  THINGY_ROADMAP.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: deploy.yml  tests.yml
apps/thingy_bridge/: .env.example  .gitignore  CLAUDE.md  README.md  bot.py  commands.py  requirements.txt
docs/: QA-2026-06-09-night-pass.md  QA-CHECKLIST.md  ROADMAP.md  TASKS.md  THINGY_SURFACES.md
docs/history/: STANDALONE_BUILD.md
web/: .oxlintrc.json  .stylelintrc.json  CNAME  MIGRATION_LOG.md  chat.njk  dispatch.njk  eleventy.config.js  eslint.config.js  index.html  index.njk  knip.json  package-lock.json  package.json  signin.njk  sitemap.njk  tsconfig.json  vite.config.js  vite.config.ts
web/_data/: site.js
web/chat/: index.html
web/contracts/: librarian-api.v1.json
web/css/: thingy-chat-surface.css  thingy-responsive.css  thingy.css
web/discord/: index.html
web/dispatch/: index.html
web/docs/: REPLATFORM.md
web/js/: thingy-account.js  thingy-analytics.js  thingy-chat.js  thingy-composer.js  thingy-dispatch.js  thingy-modes.js  thingy-session.js  thingy-signin.js  thingy-stream.js
web/public/: robots.txt  sitemap.xml
web/scripts/: generate-contract-client.mjs  qa-real-api.mjs  smoke-browser.mjs  sync-contract.mjs
web/signin/: index.html
web/tests/: account.test.mjs  assistant-message.test.mjs  chat-rendering.test.mjs  chat-store.test.mjs  chat-stream-renderer.test.mjs  chat-welcome.test.mjs  conversations.test.mjs  (+12 more)
(+186 files in other folders)
