[project]
name = "thingy-bridge"
version = "0.1.0"
description = "Discord bridge for Thingy"
requires-python = ">=3.14,<3.15"
dependencies = [
    "apscheduler>=3.11.3,<4",
    "discord.py>=2.7.1,<3",
    "httpx>=0.28.1,<1",
    "python-dotenv>=1.2.2,<2",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1,<10",
    "ruff>=0.15.22,<0.16",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
